best-effort horizontal fill for input boxes: fixes field overflow in the Add section for vgridworkflows with *-basic skin
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3216 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -1082,10 +1082,14 @@ a:hover.genericbutton {
 /* full width */
 .fillwidth {
   width: 100%;
+  width: -moz-available;
+  width: -webkit-fill-available;
 }
 /* full width with room for minor padding */
 .fillwidth.padspace {
-  width: 99%;
+  width: 98%;
+  width: -moz-available;
+  width: -webkit-fill-available;
 }
 
 /* hide complexity for sharelink ls page */
